<resources>
    <string name="app_name">Trivia</string>
    <string name="title_text">Trivia</string>
    <string name="question_count">Questions : 10/15</string>
    <string name="false_text">False</string>
    <string name="true_text">True</string>
    <string name="next_text">Next</string>
    <string name="placeholder_text">The questions will be shown in this part</string>
    <string name="end_text">End</string>
</resources>